# python-vitals

./: .flake8  .gitignore  .pre-commit-config.yaml  API_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  app.py  main.py  pyproject.toml  pytest.ini
specs/: coding_style.md  score2.md  score2_diabetes.md
src/phenoage/: coefficients.py  compute.py  constants.py
test/: conftest.py  test_phenoage.py
tests/: conftest.py  test__input__NHANES3__bioage.csv  test_helpers.py  test_io.py  test_kdm.py  test_phenoage.py  test_score2.py  test_score2_diabetes.py
tests/inputs/: test__input__NHANES__KDM__females.csv  test__input__NHANES__KDM__males.csv  test__input__patient_01.json  test__input__patient_02.json  test__input__patient_03.json  test__input__patient_04.json  test__input__patient_06.json  test__input__patient_09.json  test__input__patient_10.json  test__input__patient_14.json  test__input__patient_15.json  test__input__patient_17.json  test__input__patient_18.json  test__input__patient_20.json  test__input__patient_21.json  test__input__patient_22.json  test__input__patient_25.json  test__input__patient_26.json  test__input__patient_27.json  test__input__patient_29.json  test__input__patient_32.json  test__input_kdm_patient_01.json  test__input_kdm_patient_02.json  test__output__patient_01.json
tests/outputs/: mobile_output_kdm_patient1_full.json  mobile_output_patient_03.json  mobile_output_patient_04.json  test__output__patient_02.json  test__output__patient_04.json  test__output__patient_07.json  test__output__patient_12.json  test__output__patient_13.json  test__output__patient_14.json  test__output__patient_16.json  test__output__patient_19.json  test__output__patient_24.json  test__output__patient_25.json  test__output__patient_26.json  test__output__patient_30.json  test__output__patient_31.json  test__output__patient_34.json  test__output_kdm_patient_02.json
tests/raw/: test__raw__patient_02.json  test__raw__patient_04.json  test__raw__patient_13.json  test__raw__patient_19.json  test__raw__patient_20.json  test__raw__patient_23.json  test__raw__patient_27.json  test__raw__patient_28.json  test__raw__patient_35.json  (+1 more)
(+103 files in other folders)
