[project]
name = "python_phenoage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic", "pandas", "numpy", "pyaging", "requests>=2.32.4"]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "pytest",
    "pre-commit>=4.2.0",
    "black",
    "coverage",
    "ipython>=9.3.0",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
]
venvPath = ".venv"
venv = "python_phenoage"
