[project]
name = "python_phenoage"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "pydantic",
 "pandas",
 "numpy",
 "requests>=2.32.4",
 "coverage>=7.9.1",
 "fastapi>=0.104.1",
 "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pre-commit>=4.2.0",
    "coverage",
    "ipython>=9.3.0",
    "ruff",
    "ty"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vitals*"]

[tool.pyright]
include = ["vitals"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "vitals/experimental",
    "vitals/typestubs",
]
venvPath = ".venv"
venv = "python_phenoage"
